--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stoneage-mail",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A command line tool to send email!",
   "main": "index.js",
   "bin": "index.js",
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/AniketS01/stoneage-mail#readme",
   "dependencies": {
     "inquirer": "^9.1.0",
+    "node-banner": "^1.4.0",
     "nodemailer": "^6.7.8"
   },
   "type": "module"
