--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/AniketS01/stoneage-mail.git"
   },
   "author": "Aniket Shetye",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/AniketS01/stoneage-mail/issues"
   },
